--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/R_2 Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Rohith Prakash's portfolio – showcasing modern web development projects using React, Node.js, and more. Let’s build something extraordinary!" />
     <title>Rohith Prakash</title>
   </head>
   <body class="invisible-scrollbar">
